# ADORE

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: dpv_feature_definitions.md  feature_table_schema.md  ml_training_workflow.md
examples/: dpv_example_manifest.csv  example_pairing_manifest.csv  expected_example_features.csv  feature_table_template.csv
examples/raw_dpv/: l012_example.txt  mb_example.txt
models/: adore_svm_model.joblib  model_metadata.json
scripts/: build_feature_table.py  extract_features_from_examples.py  predict_with_svm_model.py  train_classifier.py
src/adore_dpv/: __init__.py  feature_extraction.py  io.py  modeling.py  pairing.py
tests/: test_feature_extraction.py  test_io.py  test_pairing.py  test_svm_prediction.py
